# servlink-data

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DATA_CATALOG.md
sql/: 001_enable_extensions.sql  002_create_raw_tables.sql  003_create_dim_tables.sql  004_create_fact_tables.sql  005_create_audit_table.sql  006_rls_policies.sql  007_indexes_gin.sql  008_classifier_functions.sql
src/: __init__.py
src/config/: settings.py  supabase_client.py
src/extractors/: overpass_osm.py
src/loaders/: __init__.py
src/models/: estabelecimento.py  indicador_macro.py  serp_result.py
src/transformers/: llm_classifier.py
src/utils/: logger.py  retry.py  validators.py
tests/: __init__.py
tests/test_extractors/: test_overpass_osm.py
tests/test_transformers/: test_llm_classifier.py
